--- a/src/App.css
+++ b/src/App.css
@@ -66,5 +66,20 @@
   text-underline-offset: 20px;
 }
 
+.servicepage {
+  display: flex;
+  align-items: center;
+  font-family: 'myanmar-khyay-regular', sans-serif;
+  margin-left: 70px;
+  font-size: 1rem;
+}
 
+.text{
+  margin-right: 50px;
+}
 
+.servicepageLogo{
+  margin-bottom: 100px;
+  display: flex;
+  align-items: center;
+}
