Recoded Login & Registration
Made changes to login and registration page to handle backend calls and have consistent layout throughout different screen sizes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,6 @@
-body,
+body{
+  margin: 0;
+}
 html {
   font-family: "Open Sans", sans-serif;
   text-rendering: optimizeLegibility !important;
@@ -604,3 +606,4 @@ label {
     margin: 50px 0;
   }
 }
+
