--- a/src/components/emsFiles/ems.scss
+++ b/src/components/emsFiles/ems.scss
@@ -7,6 +7,7 @@
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: minmax(180px, auto);
   grid-auto-flow: dense;
+  background-color: rgb(0, 0, 0);
 
   @include xl{
     grid-template-columns: repeat(3, 1fr);
