Side Nav Bar Structural Issues

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -30,14 +30,18 @@
 
   }
 
-  #name{
+  .fullName{
     color: black;
   }
-  
-  #email{
+
+  .email{
     color: black;
   }
-  
-  #textArea{
+
+  .message{
     color: black;
+  }
+
+  .messageHeader{
+    color: white;
   }
